# cliplusplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.cpp.017BAD4AE3639029.idx
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
